# Projeto-SisAvaliacao

./: Amostras_Castanhal_Refinadas_II_III.csv  Amostras_Castanhal_Refinadas_II_III_IMPORTAR.csv  README.md  SISAVALIA_CODIGO_FONTE.txt  amostras_teste.csv  index.html  render.yaml
assets/: modelo-amostras-sisavalia.xlsx
backend/: README.md  compose.yaml  pyproject.toml
backend/app/: __init__.py  config.py  db.py  demand_domain.py  demand_importer.py  demand_repository.py  demand_routes.py  demand_schemas.py  domain.py  geocoding.py  main.py  oauth.py  repositories.py  schemas.py  search_service.py  url_capture.py
backend/app/connectors/: __init__.py  base.py  csv_upload.py  fixture.py  mercadolivre.py  portal_sources.py
backend/fixtures/: salvador_listings.json
backend/migrations/: 001_initial.sql  002_review_workflow.sql  003_demand_control.sql  004_demand_proponent_search.sql  005_demand_art_value.sql
backend/scripts/: configure_ngrok.sh  start_backend.sh  start_ngrok.sh  start_oauth_backend.sh
backend/tests/: test_api_integration.py  test_api_security.py  test_csv_upload_connector.py  test_demand_control.py  test_domain.py  test_geocoding.py  test_mercadolivre_connector.py  test_oauth.py  test_search_sources.py  test_url_capture.py
docs/: banco-brasil-laudo-referencia.md  checklist-producao-github-render.md  motor-de-busca-arquitetura.md  ponto-salvo-2026-07-20-etapa4-controle-demanda.md  ts-sisreg-referencia-operacional.md  validacao-normativa-e-testes.md
scripts/: check_inferencia_castanhal.py  export_amostras_csv.py  export_amostras_csv_sisavalia.py
(+17 files in other folders)
